# bybit_manager_kyc_tg_bot

./: .gitignore  README.md  main.py  pyproject.toml
APIClient/: client.py
APIClient/dto/: account_dto.py
api_client/: client.py
api_client/dto/: account_dto.py  accounts_by_telegram_dto.py  database_account_dto.py  sumsub_url_dto.py
bot/: handlers.py  keyboards.py  start_bot.py
bot/api/: account_info.py  account_link.py  accounts_list.py  mark_bad.py  server_config.py
bot/messages/: links_messages.py  loading_message.py  message_parser.py  send_links.py  start_message.py
bot/model/: chatData.py  chat_data.py  state.py
bot/utils/: check_account.py  get_accounts_by_provider.py  get_data.py  proccess_account.py  time_diff.py
